# RMDGP

./: CMakeLists.txt  README.md
Documentation/: howToBuild.md
Documentation/NetBeans/: ReadMe.md  license-gpl20_RMDGP.txt
socketLib/: CClock.cpp  CClock.h  CFdWaiter.cpp  CFdWaiter.h  CFileDescriptor.cpp  CFileDescriptor.h  CInterfaces.cpp  CInterfaces.h  CMakeLists.txt  CSocketAddress.h  CSocketProxy.cpp  CSocketProxy.h  CTime.cpp  CTime.h  CUdpMulticastReceiver.cpp  CUdpMulticastReceiver.h  CUdpMulticastSender.cpp  CUdpMulticastSender.h  CUdpSocket.cpp  CUdpSocket.h
socketLib/UnitTest/: CMakeLists.txt  CSocketTestProxy.h  testCClock.cpp  testCClock.h  testCFdWaiter.cpp  testCFdWaiter.h  testCInterfaces.cpp  testCInterfaces.h  testCTime.cpp  testCTime.h  testCUdpMulticastReceiver.cpp  testCUdpMulticastReceiver.h  testCUdpMulticastSender.cpp  testCUdpMulticastSender.h  testCUdpSocket.cpp  testCUdpSocket.h  testclassCTime.cpp  testclassCTime.h  testrunner.cpp
tools/: CMakeLists.txt  mcr.cpp  mcs.cpp
